feat(core): unsued import and sonar qube issue